# akari-theme

./: .gitignore  COLOR_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  palette.toml  sample-code.ts  sample-colors.html
.github/: release.yml  renovate.json5
.github/workflows/: ci.yml  nix.yml  publish-alacritty.yml  publish-chrome.yml  publish-crates.yml  publish-fzf.yml  publish-ghostty.yml  publish-helix.yml  publish-nvim.yml  publish-starship.yml  publish-terminal.yml  publish-tmux.yml  publish-vscode-repo.yml  publish-vscode.yml  publish-zsh.yml  release.yml
chrome/: README.md  manifest.json
chrome/dark/: README.md  manifest.json
chrome/dawn/: README.md  manifest.json
chrome/icons/: ICON_GUIDE.md
chrome/light/: README.md  manifest.json
chrome/night/: README.md  manifest.json
fzf/: README.md  akari-dawn.sh  akari-night.sh  akari.sh
ghostty/: README.md  akari  akari-night
helix/: README.md  akari-dawn.toml  akari-night.toml  akari.toml
nix/: hm-module.nix  lib.nix
nix/targets/: alacritty.nix  bat.nix  delta.nix  fzf.nix  gh-dash.nix  ghostty.nix  helix.nix  lazygit.nix  starship.nix  tmux.nix  zellij.nix  zsh.nix
nvim/: README.md
palette/: akari-dawn.toml  akari-night.toml
src/: color.rs  generator.rs  lib.rs  main.rs  palette.rs  terminal.rs
src/tools/: chrome.rs  fzf.rs  ghostty.rs  helix.rs  mod.rs  nvim.rs  starship.rs  terminal.rs  tmux.rs  vscode.rs  zsh.rs
starship/: README.md  akari-dawn.toml  akari-night.toml  palette.toml
templates/: chrome.tera  fzf.tera  ghostty.tera  starship.tera  tmux.tera  vscode.tera  zsh.tera
templates/alacritty/: akari-{name}.toml.tera
templates/bat/: README.md  akari-{name}.tmTheme.tera
templates/delta/: akari-{name}.gitconfig.tera
templates/fzf/: akari-fzf.plugin.zsh  (+1 more)
terminal/: Akari-Dawn.terminal  Akari-Night.terminal  Akari.terminal  README.md
tests/: integration.rs
tmux/: README.md  akari-dawn.conf  akari-night.conf  akari.conf
vscode/: README.md  package.json
zsh/: README.md  akari.zsh  syntax_highlight.zsh
(+32 files in other folders)
