[package]
name = "akari-gen"
version = "1.7.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
plist = "1"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.17"
toml = "0.9.10"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
