[package]
name = "akari-theme"
version = "1.9.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cappyzawa/akari-theme"
description = "A terminal color theme inspired by Japanese alleys and lanterns"
keywords = ["terminal", "theme", "color", "palette"]
categories = ["command-line-interface"]

[lib]
name = "akari_theme"
path = "src/lib.rs"

[[bin]]
name = "akari-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
plist = "1"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.17"
toml = "0.9.10"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
