[package]
name = "akari-theme"
version = "1.17.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cappyzawa/akari-theme"
description = "A terminal color theme inspired by Japanese alleys and lanterns"
keywords = ["terminal", "theme", "color", "palette"]
categories = ["command-line-interface"]

[lib]
name = "akari_theme"
path = "src/lib.rs"

[[bin]]
name = "akari-gen"
path = "src/main.rs"
required-features = ["generator"]

[features]
default = []
generator = ["dep:tera", "dep:walkdir", "dep:plist", "dep:clap"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.10"

# Generator dependencies (optional)
plist = { version = "1", optional = true }
tera = { version = "1.20.1", optional = true }
walkdir = { version = "2", optional = true }

# CLI dependencies (optional, for generator binary)
clap = { version = "4.5.53", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
